# django-event-sourcing

./: LICENSE  README.md  pyproject.toml
.github/workflows/: continuous-integration.yaml
django_event_sourcing/: __init__.py  apps.py  conditions.py  globals.py  models.py  registers.py
django_event_sourcing/migrations/: 0001_event.py  0001_initial.py  0002_eventhandlerlog.py  0003_rename_event_payload.py  0004_event_context.py  0004_eventsideeffectlog.py  0005_django_json_encoder.py  0005_eventdataencoder.py  0005_json_encoder.py  0006_auto_20210324_1610.py
tests/: event_types.py  settings.py  test_conditions.py  test_django_event_sourcing.py  test_models.py  test_registers.py
