[tool.poetry]
name = "django-event-sourcing"
version = "0.1.0"
description = "Experimental library for event sourcing with Django."
authors = ["Vikash Tank <vikashtank@hotmail.co.uk>"]

[tool.poetry.dependencies]
django = "^3.1"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^24.3"
freezegun = "^1.0"
pytest = "^6.0"
pytest-django = "^4.1"
pytest-mock = "^3.4"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'tests.settings'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
